	    - Docking separate windows back in the main window. Docking
	      occurs to the closest point on the closest edge. For
	      resizable windows, extra resized docking options are
	      available.
	    TODO:
	    - Finish support for multiple docking areas.
	    - Allow resizing of widgets in the docking area.
	    - Refine docking algorithm where needed.

2006-10-09 Manuel Bilderbeek <manuel@msxnet.org>
	* Use new icon by Eric Boon also on Linux and Windows.
	  TODO: in Windows also make it an appIcon via Windows resources.

2006-10-05 Maarten ter Huurne <maarten@treewalker.org>
	* Use new icon by Eric Boon on OS X.

2006-09-30 Maarten ter Huurne <maarten@treewalker.org>
	* Committed mouse wheel scrolling support for disasm panel by BouKiCHi.
	* Corrected location of PkgInfo file (OS X).

2006-09-11 Edwin Velds <e.velds@gmail.com>
	* Added breakpoint addition dialog
	* Added preferences dialog
	* Added preferences for a few fonts
	* Added proper conversion for numeric inputs

2006-09-09 Edwin Velds <e.velds@gmail.com>
	* Symbol table rewrite
	* Added initial Settings class
	* Fixed widget colours

2006-08-06 Maarten ter Huurne <maarten@treewalker.org>
	* Implemented "make dist", which creates a source distribution tar.gz
	  archive in the directory "derived/dist".

2006-07-25 Edwin Velds <e.velds@gmail.com>
	* Added preliminary support for symbol tables.
	  Manual adding of symbols and loading of TNIASM symbol files are
	  implemented.

2006-06-14 Edwin Velds <e.velds@gmail.com>
	* Updated the connection dialog
	* Fixed a bug that caused a crash on closing openMSX

2006-05-13 Maarten ter Huurne <maarten@treewalker.org>
	* Added support for UI files in the new build system.
	* Got rid of the qmake build, since the generated UI headers in src/
	  were interfering with the new build system.
	  Make sure you get rid of the files generated by qmake; CVS will tell
	  you which files.

2006-05-12 Wouter Vermaelen <wouter.vermaelen@scarlet.be>